--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-simple-inpagenav",
   "version": "0.0.0",
-  "description": "SimpleInpagenav",
-  "main": "lib/SimpleInpagenav.js",
+  "description": "Simple 'inpage navigation' React component",
+  "main": "lib/index.js",
   "author": "Ruben Barilani",
   "homepage": "https://github.com/zalando/react-simple-inpagenav",
   "repository": {
