--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "jquery": "^2.1.4",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "query-string": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.14",
