(chore): change changelog format, use conventional changelog

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
     "gulp": "^3.9.0",
+    "gulp-conventional-changelog": "^0.7.0",
     "react": ">=0.13.3",
     "react-component-gulp-tasks": "^0.7.0"
   },
