--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-simple-inpagenav",
+  "name": "@rbarilani/react-simple-inpagenav",
   "version": "0.2.0",
   "description": "Simple 'inpage navigation' React component",
   "main": "lib/index.js",
